# ConvexHull

./: CMakeLists.txt  ConvexHull.h  Generator.h  Logger.h  Poligono.h  Punto.h  README.md  Segmento.h  Stopwatch.cpp  Stopwatch.h  Tarea_2.kdev4  Vector.h  main.cpp
.kdev4/: Tarea_2.kdev4
